@ feat: 属性修正全链路修复 — Android reducer 顺序、口碑评分展示、邮件 HTML 模板
核心修复：
- Android ActionStateReducer: correction 分支移到 filterApplied=false guard 之前，
  解决属性修正结果被提前拦截导致前端无反应的问题
- 后端 ActionExecutionService: productsUpdated 信任后端显式信号，移除 sameProductIds
  反推误判；filterApplied 对 correction 设为 false（属性修正不是筛选）
- 后端 AttributeCorrectionService: stripAttributeDerivedFilter 清除旧 brands/colors/
  keyword，避免 SearchOrchestrator post-filter 误杀新品牌结果
- 后端 ProductCard 新增 ratingDisplayLabel 字段，SearchOrchestrator 通过
  ProductReputationService 在返回前填充（淘宝·商品评分 4.8 / 拼多多·店铺口碑 高）
- Android ProductCard 新增 ratingDisplayLabel，VisionCartComponents 优先使用后端标签
- AttributeCorrectionController 统一返回 ApiResponse<ActionResult>
- NlpUndoService 支持 previousAttributes 存储与恢复，ActionUndoController 撤回时
  同时恢复识别属性到 DB
- MailService 改为 HTML 纯内联样式模板，秒加载无外部资源依赖
- .gitignore 补充 BOOT-INF/ 和 repomix-output.md
@